force-app/main/default/objects/FOPS_Assignment__c/FOPS_Assignment__c.object-meta.xml
<CustomObject>
    <description>A consultant working on a contract for a period at a bill rate and a cost rate. The commercial core of FreelanceOps: margin = bill - cost.</description>
    <label>Assignment</label>
    <nameField>
        <displayFormat>ASG-{00000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>