force-app/main/default/objects/FOPS_Assignment__c/fields/FOPS_Allocation_Percent__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Allocation_Percent__c</fullName>
    <inlineHelpText>Share of the consultant's capacity committed to this assignment.</inlineHelpText>
    <label>Allocation %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>