force-app/main/default/objects/FOPS_Assignment__c/fields/FOPS_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Bill_Rate__c</fullName>
    <description>CONFIDENTIAL - hidden from FOPS_Consultant permission set.</description>
    <inlineHelpText>What the client pays. Never expose to sub-contractors.</inlineHelpText>
    <label>Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>