force-app/main/default/objects/FOPS_Assignment__c/fields/FOPS_Bill_Rate_Monthly_Base__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Bill_Rate_Monthly_Base__c</fullName>
    <description>CONFIDENTIAL. Written by RateNormalisationService. Stored, never a formula.</description>
    <label>Bill Rate Monthly (Base)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>