force-app/main/default/objects/FOPS_Assignment__c/fields/FOPS_Billable_Hours_Cap_Month__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Billable_Hours_Cap_Month__c</fullName>
    <label>Billable Hours Cap / Month</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>