force-app/main/default/objects/FOPS_Assignment__c/fields/FOPS_Consultant__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Consultant__c</fullName>
    <inlineHelpText>Contact with record type Consultant who delivers this work.</inlineHelpText>
    <label>Consultant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>FOPS_Assignments</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>