force-app/main/default/objects/FOPS_Assignment__c/fields/FOPS_Contract__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Contract__c</fullName>
    <inlineHelpText>The signed engagement this assignment is staffed under.</inlineHelpText>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>FOPS_Assignments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>