force-app/main/default/objects/FOPS_Assignment__c/fields/FOPS_Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Cost_Rate__c</fullName>
    <inlineHelpText>What you pay the sub-contractor delivering this work.</inlineHelpText>
    <label>Cost Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>