force-app/main/default/objects/FOPS_Assignment__c/fields/FOPS_Cost_Rate_Monthly_Base__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Cost_Rate_Monthly_Base__c</fullName>
    <description>CONFIDENTIAL. Written by RateNormalisationService.</description>
    <label>Cost Rate Monthly (Base)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>