force-app/main/default/objects/FOPS_Assignment__c/fields/FOPS_Cost_Rate_Unit__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Cost_Rate_Unit__c</fullName>
    <label>Cost Rate Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Fixed Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>