force-app/main/default/objects/FOPS_Assignment__c/fields/FOPS_End_Client__c.field-meta.xml
<CustomField>
    <fullName>FOPS_End_Client__c</fullName>
    <label>End Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assignments (End Client)</relationshipLabel>
    <relationshipName>FOPS_EndClientAssignments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>