force-app/main/default/objects/FOPS_Assignment__c/fields/FOPS_End_Date__c.field-meta.xml
<CustomField>
    <fullName>FOPS_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>