force-app/main/default/objects/FOPS_Assignment__c/fields/FOPS_Exchange_Rate_Used__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Exchange_Rate_Used__c</fullName>
    <inlineHelpText>Frozen at assignment activation. Never recalculated.</inlineHelpText>
    <label>Exchange Rate Used</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>