force-app/main/default/objects/FOPS_Assignment__c/fields/FOPS_Gross_Margin_Base__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Gross_Margin_Base__c</fullName>
    <description>CONFIDENTIAL.</description>
    <label>Gross Margin (Base)</label>
    <formula>FOPS_Bill_Rate_Monthly_Base__c - FOPS_Cost_Rate_Monthly_Base__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>