force-app/main/default/objects/FOPS_Assignment__c/fields/FOPS_Gross_Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Gross_Margin_Percent__c</fullName>
    <description>CONFIDENTIAL.</description>
    <label>Gross Margin %</label>
    <formula>IF(FOPS_Bill_Rate_Monthly_Base__c &gt; 0, (FOPS_Bill_Rate_Monthly_Base__c - FOPS_Cost_Rate_Monthly_Base__c) / FOPS_Bill_Rate_Monthly_Base__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>