force-app/main/default/objects/FOPS_Assignment__c/fields/FOPS_Hours_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Hours_Per_Week__c</fullName>
    <label>Hours Per Week</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>