force-app/main/default/objects/FOPS_Assignment__c/fields/FOPS_Is_Self__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Is_Self__c</fullName>
    <label>Is Self</label>
    <formula>TEXT(FOPS_Consultant__r.FOPS_Consultant_Type__c) = 'Principal'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Checkbox</type>
</CustomField>