force-app/main/default/objects/FOPS_Assignment__c/fields/FOPS_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
    <required>true</required>
</CustomField>